# HMAC-protected-circuit-breaker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  circuit-breaker.yml
examples/: basic.rs  with_axum.rs
src/: config.rs  integrity.rs  lib.rs  loader.rs  middleware.rs  state.rs  writer.rs
tests/: integration_test.rs
